# BinWeb

./: .gemini_context.md  .gitignore  CMakeLists.txt  README.md
core/: NativeApp.cpp  NativeApp.h
platform/android/: build.gradle  gradle.properties  settings.gradle
platform/android/app/: build.gradle
platform/android/app/src/main/: AndroidManifest.xml
platform/android/app/src/main/java/com/binweb/app/: MainActivity.kt
platform/windows/: main.cpp
tools/: embedder.cpp
web/: index.html
